k8s/larademo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: larademo-service
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30600
    protocol: TCP
    targetPort: 8080
  selector:
    app: larademo
