k8s/larademo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: larademo-ingress
spec:
  defaultBackend:
    service:
      name: larademo-service
      port:
        number: 8080
